# vusion_fed_learning

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fran.ipynb  frank.txt  requirements.txt  test.txt
Analytics/: analyse_data copy.py  analyse_data.py  data_analytics.ipynb  (+4 more)
BlueLLMTeam/: README.md  prompts.json  pyproject.toml
BlueLLMTeam/BlueLLMTeam/: LLMEndpoint.py  PromptDict.py  RoleAgent.py  banner.py  createFiles.py  data_promts_endpoint.py  db_interaction.py  franktest.py  main.py  monitor.py  testCowrieDeploy.py  utils.py
BlueLLMTeam/BlueLLMTeam/Agents/: agent.py
BlueLLMTeam/BlueLLMTeam/Agents/designers/fs/: fs.py
BlueLLMTeam/BlueLLMTeam/Agents/designers/fs/v1/: AddContents.py  createFiles.py
BlueLLMTeam/BlueLLMTeam/Agents/designers/fs/v2/: createFiles.py
BlueLLMTeam/BlueLLMTeam/Honeypot/: AddContents.py  PromptDict.py  createFiles.py
BlueLLMTeam/BlueLLMTeam/agents/: __init__.py  base.py  leader.py
BlueLLMTeam/BlueLLMTeam/agents/analysts/: __init__.py  base.py  cowrie.py
BlueLLMTeam/BlueLLMTeam/agents/designers/: __init__.py  base.py  cmd.py  cowrie.py  fs.py
BlueLLMTeam/BlueLLMTeam/agents/designers/fs/: pickle_fs.py
BlueLLMTeam/BlueLLMTeam/agents/designers/fs/v2/: createFiles.py
BlueLLMTeam/BlueLLMTeam/database/: data_promts_endpoint.py  db_interaction.py  log_db.py  process_db.py  simulate_requests.py
BlueLLMTeam/BlueLLMTeam/utils/: docker.py  path.py  text.py  threading.py  tqdm.py
BlueLLMTeam/Cowrie/: createFiles.py
BlueLLMTeam/conf/: cowrie.cfg  cowrie_commands.txt
BlueLLMTeam/tests/test_utils/: test_json_parsing.py
(+5 files in other folders)
